[package]
name = "core2"
version = "0.1.0"
authors = ["teruyamato0731"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
  "esp-idf-svc/embassy-sync",
  "esp-idf-svc/critical-section",
  "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
esp-idf-hal = { version = "0.43.1", default-features = false }

embedded-hal = { version = "1.0" }
display-interface-spi = { version = "0.4.1" }
ili9341 = { version = "0.6" }
embedded-graphics = { version = "0.8" }
mipidsi = { version = "0.7.1" }
embedded-hal-bus = { version = "0.2.0" }
embedded-can = "0.4.1"
anyhow = "1.0.86"
nb = "1.1.0"
zerocopy = { version = "0.7.35", features = ["derive"] }
cobs-rs = "1.1.2"

[build-dependencies]
embuild = "0.31.3"
